--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.edu.senac.atividade1">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature
+        android:name="android.hardware.camera.any"
+        android:required="true" />
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
+        android:required="false" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,27 +19,34 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".conversor"
-            android:label="@string/title_activity_conversor"
+            android:name=".ListaProdutos"
+            android:label="@string/title_activity_lista_produtos"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
-            android:name=".Aplicativos"
-            android:label="@string/title_activity_aplicativos"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".Sobre"
+            android:label="@string/title_activity_sobre" />
         <activity
-            android:name=".principal"
-            android:label="@string/title_activity_principal"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".Conversao"
+            android:label="@string/title_activity_conversao" />
+        <activity
+            android:name=".CalculoIMC"
+            android:label="@string/title_activity_calculo_imc" />
+        <activity
+            android:name=".Principal"
+            android:label="@string/title_activity_principal" />
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:label="@string/title_activity_main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
